--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+:root{
+    // primary colors
+    --orange : #FDA214;
+    --lightsmoke : #BCCED9;
+    --darkash : #304859;
+    --darkblue : #152938;
+    // secondary colors
+    --whitesmoke : #f2f2f2;
+    --gothic : #7191A5;
+    --hippieblue : #6395B8;
+    --white : #FCFCFC;
+}
+
+
 *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
 }
 
+h1, h2, h3, p{
+    font-weight: bold;
+}
+
+h1{
+    font-size: 48px;
+}
+
+h2{
+    font-size: 32px;
+}
+
+h3{
+    font-size: 20px;
+}
+p{
+    font-size: 18px;
+}
+
+.btn{
+    padding: .7rem 1.5rem;
+    border-radius: 30px;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    color: var(--white); 
+    cursor: pointer;
+    border: 1px solid transparent;
+}
+
+button.selected{
+        background-color: var(--darkblue) !important;
+    }
+button.hovered{
+        border: 1px solid var(--darkblue)!important;
+    }
+
 body{
-    background-color: #808080;
+    font-family: 'Atkinson Hyperlegible', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: var(--darkblue);
+}
+
+.start-game{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8rem;
+    h2{
+        color: var(--white);
+        margin-bottom: 5rem;
+    }
+    .game-board{
+        background-color: var(--white);
+        width: 550px;
+        height: 550px;
+        border-radius: 20px;
+        .content-top{
+            padding-top: 3rem;
+        }
+        .game-board-content{
+            padding-left: 3rem;
+            padding-right: 3rem;
+            padding-bottom: 2rem;
+            color: var(--gothic);
+            .select-theme-buttons{
+                width: 100%;
+                margin: .6rem 0;                
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                .numbers,.icons{
+                    width: 45%;
+                    background-color: var(--lightsmoke);
+                    font-weight: bold;
+                    font-size: 16px;
+                    color: var(--white);                    
+                }
+                .one, .two, .three, .four{
+                    background-color: var(--lightsmoke);
+                    width: 20%;
+                }
+                .grid-one, .grid-two{
+                    width: 45%;
+                    background-color: var(--lightsmoke);
+                }
+                .start-game-btn{
+                    width: 100%;
+                    background-color: var(--orange);
+                    padding: 1rem 1.25rem;
+                }
+            }
+            
+        }
+    }
 }
